# ChangeLog for dev-python/PyQt4
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/PyQt4/ChangeLog,v 1.210 2013/02/15 08:07:48 pesa Exp $

  15 Feb 2013; Davide Pesavento <pesa@gentoo.org> PyQt4-4.9.6-r2.ebuild:
  BUILDDIR -> BUILD_DIR, fixes bug 457538 by ago.

  13 Feb 2013; Davide Pesavento <pesa@gentoo.org> -PyQt4-4.9.6-r1.ebuild,
  -PyQt4-4.9.6.ebuild, PyQt4-4.9.6-r2.ebuild:
  Fix double prefix; remove old.

  04 Feb 2013; Michael Palimaka <kensington@gentoo.org> PyQt4-4.9.6-r2.ebuild:
  Use run_in_build_dir. Add python-3.3 support wrt bug #455020.

*PyQt4-4.9.6-r2 (29 Jan 2013)

  29 Jan 2013; Michael Palimaka <kensington@gentoo.org> +PyQt4-4.9.6-r2.ebuild:
  Migrate to the new python eclass.

  27 Dec 2012; Davide Pesavento <pesa@gentoo.org> PyQt4-4.9.6-r1.ebuild:
  Improve pyqt4_use_enable() as suggested by Arfrever.

  26 Dec 2012; Davide Pesavento <pesa@gentoo.org> -PyQt4-4.9.5.ebuild:
  old

*PyQt4-4.9.6-r1 (26 Dec 2012)

  26 Dec 2012; Davide Pesavento <pesa@gentoo.org> +PyQt4-4.9.6-r1.ebuild,
  metadata.xml:
  EAPI=5 to be able to use slot operators in sip dependency. Sync USE flags with
  pyside: rename assistant to help, add script and scripttools (bug 431460 by
  Arfrever).

*PyQt4-4.9.6 (10 Dec 2012)

  10 Dec 2012; Davide Pesavento <pesa@gentoo.org> +PyQt4-4.9.6.ebuild:
  Version bump, with some minor updates from qt overlay.

  22 Nov 2012; Markus Meier <maekke@gentoo.org> PyQt4-4.9.4-r1.ebuild:
  arm stable, bug #435074

  28 Oct 2012; Markos Chandras <hwoarang@gentoo.org> -PyQt4-4.9.4.ebuild,
  PyQt4-4.9.4-r1.ebuild:
  Promote 4.9.4-r1 bugfix rel ebuild to stable. Drop old

  28 Oct 2012; Markos Chandras <hwoarang@gentoo.org> -PyQt4-4.8.4.ebuild,
  -PyQt4-4.9.1.ebuild:
  Remove old

*PyQt4-4.9.5 (05 Oct 2012)

  05 Oct 2012; Markos Chandras <hwoarang@gentoo.org> +PyQt4-4.9.5.ebuild:
  Version bump

  09 Sep 2012; Raúl Porcel <armin76@gentoo.org> PyQt4-4.9.4.ebuild: