@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX PyQt4-4.7.2-configure.py.patch 933 SHA256 1a87c58ccb14441f77c7c764b6e6c40d1bdd64c5b35581f3deda54019a3461be SHA512 e2484a7361fabe32861913fe2e81e8c4a2d4e0d697a82a643dfc45332e99221767b0224df3fb0b5da27e33f7c2e6585d5b09a022e3fe35e9c8e3af2ba5feb4a3 WHIRLPOOL 44435221972b24dff022c78ffaa0c5888e035a88e95ebf2220605e34ca736d272b46cf875bbe7bde16b3137f255026f8d07e51c35fc6a9fd52d1256feba32312
 AUX PyQt4-4.7.3-qreal_float_support.patch 6460 SHA256 8183d7a12c094d02eb4f1ac2b983690c39ee54182a0d28adba52348f705e9c16 SHA512 b333f4016b048af66bb13177981dc468f6e645d9280c18a4f419127c48aca8b4d5c034a167be7353884b715e67ec110ff7d4d4e850793883186ebfef7678e372 WHIRLPOOL 9c7a0409023e8c3af3626bfb3887aea687c07feb5235506ea0ed01171095d575b5681171dc5cde1c796448bb83e26449cab7df2432e172b47b43ec751bf99317
@@ -7,23 +7,23 @@ AUX PyQt4-4.9.4-pyuic-custom-widgets.patch 3212 SHA256 8a59ee0fcd3f1d8a52745c68c
 DIST PyQt-x11-gpl-4.9.4.tar.gz 9801300 SHA256 29416e9b2dd394d39c3034e103717a40b9090ec05f457600a4d62b6f29b27e48 SHA512 719abd2dc5504c9fdab3151d9649915d80d4b9e59f4f122127c7d9c5938cb4116ba993d7ff1a8468d098bb76d49c7f36aa5f13b30f44fedc38192e89e751e1f3 WHIRLPOOL 294a6d77ecf6540561795219ea02d687d906fd635b1de0c8d78cc60ddf51bf870f819127f58c9bb406edb942a3c8caaf4d581045920b99ecd4b9bb831d16d214
 DIST PyQt-x11-gpl-4.9.6.tar.gz 9349834 SHA256 a350f9e5c6d8062671c0f29bf1a70824719b18175ce8372c29bf7c1eda44b18d SHA512 1d0ca00d529f67d33e51b947b9e2c49a64611a842f1a78220c9390afd1657e909451d9b758d0c008b6efbba7ed047f18ca41323e4db2269d685b9d2400a604aa WHIRLPOOL fd9e2339014e2cce9c4106f92593abca3d71881c57a90e6084a08fdc55213cd640723b988fa792bf4e20e448fb7f6fc43fb72bb45fb7c81bf5819684620ad4ae
 EBUILD PyQt4-4.9.4-r1.ebuild 5742 SHA256 601ced757792b9e858a0c4ad69a5aa5ccb6fd961c791f681de8ad2469db0b83b SHA512 294287e228c70a3ca41b52cfeebc7e35b121aeea46ce6c84ead7e9239f1cd2a15d195535376306f917a9b51a9936a8b48c1c985410cd1b402f1be80f5a001820 WHIRLPOOL 6ff0cb2300333730e50222b00bc2f1b3ff66f03e379e33872214df44be9773b324645964aee7a1ff87d1140187e7737dd3f1892163fdc70c88d00b94bed52de2
-EBUILD PyQt4-4.9.6-r2.ebuild 5308 SHA256 611414cb0c668965090366512d106d9c8b042ef330ec8ed227afbb9b5405bec9 SHA512 6cbc0bd01e84735a3f71335cee9f9c9a7c8bd8f0ec0e9d95db74e89905e2b2743e7f9cccf43dcd1e6e2a269a787056461676584723306e273efc45c190a240c2 WHIRLPOOL de6d7d1fed31b33885a928a8735622cb65dad8adc73c00a26e28428f05cb8a8982c9926e06a39bb08514d3570729ac619c0d07c604d9891b99b5a6ed08e86502
-MISC ChangeLog 29385 SHA256 856984f885fb39d39a708b085681ac773a2e819f536ce5ff36410f8d73c21716 SHA512 523d76d78b33bcbbefb447315853c696eb53c4f6e78504bc7920b3168007f1fac9e8cbfa37211bc639fa3a584e8c6c96344983b4355e9e7931e926fd627c86b3 WHIRLPOOL 0648da3698e17c6eb623c9576087473f8117d754fd48c03a125885e78aeaee534164ff6a28d054dc07d9fa6e166880b830b2207765890f059a34127f7c7f31d5
+EBUILD PyQt4-4.9.6-r2.ebuild 5306 SHA256 b1e6ac36a893fcb52d79383cb105b102f7cbe5891b566b99fca11c3070a0df17 SHA512 175da90383ffd42a2c21759664e9144be6875962f78b50fea584fe8c619d98a3d13cfba1ab799bf518074e09a144489ce433c2b26046ed94a8c8d5e40cd61253 WHIRLPOOL 6073434632fed8ca5c0a687e2ab91408d2a0fa843f77a891f95b21a3c7b051bca61b97cc2d19d794bb6357b5aa0d0f979305908acd27c42a7e6517395195eb33
+MISC ChangeLog 29493 SHA256 8113a952ab3102096e6c24ee3c3a5da042aa703853c920da5d593fd46bdbaa7a SHA512 5906773e3a05e726204e41784ec78eaeda23d3d2fcd79d32d54a0d7eaed15f04f18e1f7c398f81a8b2dcb5b4050ca3ed0ac846bdd277af56a9e99c70984043cb WHIRLPOOL c3c997a3304fe73166519aa6396f2788058cf68a3a032fbe69bbf12ebeae81060796d890cd92e5e60db8e47f050ef5d62afa324316b2f4e600595584aee14e2d
 MISC metadata.xml 1259 SHA256 6e84edc762013d947ce99abe16bc677889a2df354930daa460cac89c7719b972 SHA512 afed2276d4b93648b7706013cf6877cb7cfb1df94d42aa7dd26b902cbd2ccdc3e420e267aeb26d5899a8c69b4cd17909ee30e0b13982fd0f9c8e6c7b13362857 WHIRLPOOL a65b3dabe625baf77ecdaac2a00c36b5bf42bb2f310b5238bc975cee192f87531175d88e02cbe22db85121ac01d5a23df292db474350b87db038a373cb79cda1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRHezjAAoJENXLsxwXqFxyCrMP/j6ZL9agwk15ueOgBjIRylqy
-dTYG+Ofz/2F+sBOVPL7AYgK7E+7/YRQHBt2AufWg5louSG8rNdllIziY9BaUW4aa
-GvJ8y0Vq2sYG3ULBxG9Tthm/XSTrj8lVDGbSpNpxDZgYKLCp5vyulZQxlFxvxBCt
-38HIamMMBtsN2xYJzTaiAGUpCr4Oh8nJxSDNMKqI2byepqtNUJ42kmHdFjtI+CS9
-kvhjIRT3ET1xb0G0B79KA5wDeplHyBu4glwby43XpiRk3pFMdZkXEcc6iPJnHJRv
-zYt62v7LS805GGxFF3r5SzRlCbbrS739dBpONy29YhqY+CUsBXv/bn2uH3NOwsON
-WyHsmlb3rwCGQHYZwHMOpD9Mc0z5Cbef4ARF0CRa3zF5HbkDClxRa3ycvKcR3g13
-0bGgdk9DC4+SryaabNCf5RK6N4b8drT5ji7dgYR2fVLpI7Ms0g6dJ8UWi5mj30cg
-/6hu/2yEqQKfFsTKLGpYeJibyQZTTSSWQc0MTPlQfuaqeJWC1ZvkmkxDVWBOsCT8
-zSB/e8xEvkQiIsmwMU0OdZ407ZyRT9RL3/7lihKwiuxrEIk2PWBmJzj8UofUZYZx
-fyqzjFpyz1J4iunihZX/NRH29pzZUhAxI7qrJ8RQGMx0M/3apAgA6yTckgHvCt49
-r/dwY9zDPuxjsh8E12Qx
-=f7WQ
+iQIcBAEBCgAGBQJRHnqEAAoJELp701BxlEWfnE0P/jO8Ql0h0reDnc7RMPHrM7OH
+djAE+kpURQoSSKz1zLiHWv6ZhVYBxKEBqCgVg40MdP7oJFep6gOnQy/FCqPbUxIO
+prIlj+rScFZN1zRsdZ7KR0QXqNax6ApwzgJFaHlvT3llLpXWG2SE13S34JIvy+6u
+3AsKUeWgOeFiyhBe704UwRtiX10t3cXk+O1+v25/TCsO2+QwfJw99VC5Wok9krWw
+IYjm8ck6XswM2o3ghhT94BG6mRx9xbFxuIoGtExdhvK3FCgE1jMMhkxvvT79oUWD
+ZSu4dqGFDXee/D0Cb8XXDhnc84pSsY2m8DI8WbgXMr7H3BuFrfMgevs2pT2w1bjn
+ZUcyl3N445hgWjX0r4kBrxxkcMoIZHOK+poqvpF743NTo/7sLuL7x4LtnHCCNqDI
+Wa1CQGnXM97EP7fcTM31fOqQuKzWVz6QCG3IOuQ3caf2zUOkyh1eBPpM/wDs9IHA
+iI8jcRlYjbFBQZ1eDg0KzWrMxg8U4hqXavlPJBt4XPxKDrrkUsigsaPdoPTrPej2
+saBpRQBTR1QBwuDQr4+AY1zWi1gD1T+77Lc9o4NVssXTczbSh6hZTyREOXy8Krx3
+X+wxot0PDrpC5ZxFceTLx1exbEEBF5OistNoIt6w1whnBO0C5hN7ecwy1TcFBU7n
+/QN/Ue6iwegxO5FE1MXE
+=exbm
 -----END PGP SIGNATURE-----
