@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX sip-4.9.3-darwin.patch 1447 SHA256 91751308ce118af4f7f7cb3ac3e25de29c527ddc0bb52102e6e835c8c0e64ea2 SHA512 a0b2c4deb30b547473d8e2b095b57d32c8a82c12e5670b330fbfce1faddab87960a0c71b150fd7c51a5ce6486eb54b40fd6fa15d76b031599b988fc88179486b WHIRLPOOL 88cc2a34b1616dcb5377879cc9e50d9dc16b7ed505ac88c14aadbb3ce9d824fdf196231fcbdcc5c63cfe7c8c531bf70799e7cf56d0b20db2c3a433668596f9fb
 DIST sip-4.13.3.tar.gz 734458 SHA256 ec295f71ef339c5b98db5650865f2c6c1200c4085b7a3f33f284111e1f534ac1 SHA512 2e27bfbb79285e420c8989f620dca52b7bf5f0c70377c4e50def20f3440bae60c5a4cd12d03ec40f1270ddcce4f2137b3b1accd6f6646292855c8b344afd9059 WHIRLPOOL 3304b0865f3cc7f015b719a083d6632efeafa7b9233a5138397c222ef01f1a2ed74f2e793b193b8576571f0af1b549111a964ee21106d3b1818eba696943ae1a
@@ -7,13 +7,23 @@ DIST sip-4.14.2.tar.gz 746440 SHA256 1a9d3bf26c821f369c175f8e68946b79bc994da4f96
 DIST sip-4.14.3.tar.gz 747092 SHA256 a84fcaf0e400a45496fe70f0cf1adc7eddf0788ade44a4567d51db8bf1ff5770 SHA512 8e91ef5efbdb84d22812b392e2fb7bfdd6e8b798d49245b7ba945f24a452475be4f5bee0d11a7a00553ec8d1628ee80542a910f87e24fe5dcc1b81fd8b9b122a WHIRLPOOL 0d8634aa175239066c387244e9296a51123ae4219419c346ff93ff68dc451af75b0cd8d136e03658ea280930b3bde7acb50d65a4e138ffbe9268a7acd69a9e62
 EBUILD sip-4.13.3.ebuild 2022 SHA256 30d8a44dd20d1a5e025b6cabc2e7ce48c8139c66083664c73c6f8262d916e661 SHA512 0b06c8e00b1cec885df0d7ea161a9f3d2f6097526958bdacd3dd81cdaf137ef6f1fef6791cf8e360dc0f67f33f7b06ce2ce93477a9de7ee4a1109f9dfa32f0f2 WHIRLPOOL 1728c8e8d519528c27536449f2568aeef7b3197a1fec5784b8fc0157bca79f375354da2cddda747e39fb8790469f095dc7b29d1d8cb330225535bed5718a6fe6
 EBUILD sip-4.14.2.ebuild 2915 SHA256 0ab3463610a8e24bce7a2c16d017689cc73a093360fa9009c4ff94a78e18bac0 SHA512 860c9ecb700ccae4b86b40025f603fa0d9354c3548c35ef0a213e6f3bb81a5bc96407d77cec4e1112bc02f0eb28e5ecd2d7e31c7a7468356ad987df0cc188c0c WHIRLPOOL eee39aafddd52eb4acd274c4b18569342f5683cf4a0269a6c4aecc924455d8f3f26ab11846182346fd9c18d191acd671ec3e9b3818b1ba1dd0db2335972e1402
-EBUILD sip-4.14.3.ebuild 2928 SHA256 6156e38dbae93274553851908588420408d498d8118d85316d28e6247187c173 SHA512 1ca503f55c196c97ec2ccdfb2c36fcd361cd01ecea28ca96bbf00d263c39ebc833b709c0d30ef986b5a0fe6c71b51e1c0f6ce4a6dc1ba223784143217ccfacd3 WHIRLPOOL 4a4713991744721a391ff181fbe02276074d418241d8834b01b3f8fc26d5e1d7d6471399546887e5a53223d292748a97874961c20ad2653f7d93465fa2a885a8
-MISC ChangeLog 28998 SHA256 75819d684d5df5fa537967b928b733c0d746fda9a1d87c6d6214ffbfcea78997 SHA512 4b43024882e1fd3b7401e3428ef07e5ab91ba9ef38fbdc2aeec838d8e7f8c8fb8519f558dcae70ec3bdb95a584f583e24429e650ecda7b439debd2236e204333 WHIRLPOOL a52c7748d7dd84970c6a5f48bcdac592de73b03b607f5071851b25b7b089a76feac672616ac9371d3bcb283e40cbcdd12ee85a9026fc219f95621592c8d0b0c5
+EBUILD sip-4.14.3.ebuild 2922 SHA256 eb777387470698b62738bee4b381b9b7de92856e4fd32f1b2d6f9348e61e2149 SHA512 344eec930bc35af520d2be8daa22fd6c11b063fe39077ba07b6c11a30bfb7aadc5eb8c3235808481a8dd0936d08c2819a17cdf662ff684e845ecb0e3f268e9bd WHIRLPOOL 336b2adfa087902fd3f50f5eda3f2034ba6991f2487adcf8fd8d806e6ef26d474967eb841fc10fca0de29c1e267e8bba21c4b9eba1d4c850ffa5a196c9ca5d5b
+MISC ChangeLog 29098 SHA256 d86055131bcadf461e7d09f428ecee16696218cd7b56ab58854044b2a803bfae SHA512 932a19ce76b90ea3d5d72387d761781b401b5213aed4d7230b14410d875d224d8aa1f2af43219304f0c2e7ad50f6a257b6394b4b83f839d13ed06c721d010e29 WHIRLPOOL 91ccfba8c2bf0740e2da7da3da07e3da4c2d495168c2aba8e636ab3e28b984bb6a9539263c57537e15d8f6baaae357f2d318206bb6aabec39093bff6223af161
 MISC metadata.xml 422 SHA256 a39c95b926df4f580178e84c2705f41a0991f75ab6e6bc465f5fb99f02a08412 SHA512 ac3dcaa48537ac9a4e641749817cc9d3799b96577d8a82258f0d5b5476cbe452de2aaae5a7ee183b31f8054aa9baf44c138206c3a240589e2c6aca5a65a3e4cf WHIRLPOOL efce5684d26c31c9d89930a97cbd8b2f83228eba71e4d830e5b2fb57ef3a11fcf9d27f34b21cdc098314e4084f50f12afcb51b1efc69fd6eef1823b710d9b8f7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlEVj8QACgkQ1ycZbhPLE2B0dwCbBtDUEDP8z/Aj6kDoWSVSTx+F
-NE0AoKSNijreTVpnaoue00rZOuHJqDP7
-=spmx
+iQIcBAEBCgAGBQJRHnpvAAoJELp701BxlEWfrXwP/RsfL0x2vUXCM70xi2uLMN9x
+V7up6b/9IbLfhIbRaaled50FVyz3aJ0K70i223/2ptLUg48DOpBE8CXAbYxx7Zxv
+38+neW6XKmfA1n9kcXTyqrmAdkeEv0VuBw7QXBOlDCbcbstsBoI30yvLm+VyReIZ
+1xN7AFedRpcu7vKGlEy9cq+jHU20TqcLRzTAU2g/1n61iGRsuSXiEfuPO/jYHJnJ
+GPT39GA0KkiYIXyiDwfIc80oiDmtdBwGyxvSM4a+3oKoKSEnaB6Sig/qSqhXqSXh
+/Le07o174VdfxPfqaULET7OMi/rGoSHTflJpO1SWyQizCTBzlvM+gk9BNVZFBEeE
+afKtpEiA82/amg0DlsKq6C5zRru2P0OPffVX0dpbhHk8MIgPJbbIYo5bhgSvNuwh
+/kUqvGbEiYlF2lQIgQbIh/OEo7vmQaJr46RtPSSBS+5jIc5Jgbzj3C63SvpVo/F0
+1DKUkW6/TDyi08brl2k2gDfC8/mXMHwxSfdp2PUmLUmvCIUbJtGOaR50IsktN3vB
+KeTHW53+52TfqgZuAQPbZL5UOnK95pRTnJqo5jW9saIaLZcBMcrU+ABYNWeQZOmV
+a3onVynhaXKNqR1XtycYxnzAVOJ0KClwIBLVYztCPVQrZAHY/PRRI7gW3Bvi4oFW
+BwZ1RuJ/pNArkHpQs5TF
+=7wo5
 -----END PGP SIGNATURE-----
